name:                spock-examples
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/flounders/spock-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Williams
maintainer:          steven.m.williams@yandex.com
copyright:           2017 Steven Williams
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable spock-examples
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , text
                     , mtl
                     , lucid
                     , sqlite-simple
