name:                simple-post
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/flounders/simple-post#readme
license:             BSD3
license-file:        LICENSE
author:              Steven Williams
maintainer:          steven.m.williams@yandex.com
copyright:           2018 Steven Williams
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simple-post
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock
                     , text
